--- a/src/app.css
+++ b/src/app.css
@@ -1,4 +1,4 @@
-#app {
+#home {
     background: linear-gradient(90deg, rgba(128, 128, 128, 0.192) 1px, transparent 1px),
         linear-gradient(rgba(128, 128, 128, 0.192) 1px, transparent 1px);
     background-size: 40px 40px;
@@ -7,8 +7,17 @@
     height: 350vh;
 }
 
+#workart{
+    background: linear-gradient(90deg, rgba(128, 128, 128, 0.192) 1px, transparent 1px),
+        linear-gradient(rgba(128, 128, 128, 0.192) 1px, transparent 1px);
+    background-size: 40px 40px;
+    background-color: white;
+    width: 100%;
+    height: 200vh;
+}
+
 @media (max-width: 640px) {
-    #app {
+    #home {
         background-size: 80px 80px;
         height: 500vh;
     }
