--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
+* {
+  scroll-behavior:  smooth;
+}
+
 @font-face {
   font-family: 'HelveticaNeueCyr';
   src: url('/fonts/HelveticaNeueCyr-Light.otf') format('opentype');
